# GarbageCollector

./: .gitignore  CMakeLists.txt  README.md  c_test.c  cpp_test.cpp
collections/: CMakeLists.txt  meta.h
collections/c/: Allocator.cpp
collections/cpp/: VSharedPtr.hpp  gc.cpp  gc.h
gc/: gc.h
gc/c/: Allocator.cpp
gc/cpp/: Ptr.hpp  VSharedPtr.hpp
test/: CMakeLists.txt  c_test.c  cpp_test.cpp
